增加公共颜色

--- a/code/src/styles/common.scss
+++ b/code/src/styles/common.scss
@@ -51,3 +51,73 @@
     margin-left: 50px;
     margin-right: 50px;
 }
+
+// 公共颜色
+.color-304156{
+    color: #304156;
+}
+.color-fff { color: #fff;}
+.color-0ff { color: #0ff;}
+.color-78859a { color: #78859a;}
+.color-59deee { color: #59deee;}
+.color-ffd130 { color: #ffd130;}
+.color-9eaaab { color: #9eaaab;}
+.color-cfa364 { color: #cfa364;}
+.color-54f5fe { color: #54f5fe;}
+.color-a9f500 { color: #a9f500;}
+.color-fafbfd { color: #fafbfd;}
+.color-f8f9f9{color: #f8f9f9;}
+.color-f8545b{color: #f8545b;}
+.color-e8ae42{color: #e8ae42;}
+.color-14dcd9{color:#14dcd9;}
+.color-00ffff{color:#00ffff;}
+.color-6eee97{color: #6eee97;}
+.color-a6b4d2{color: #a6b4d2;}
+.color-ff5046{color: #ff5046;}
+.color-ff8d41{color: #ff8d41;}
+.color-ff7169{color:#ff7169;}
+.color-a6b5d2{color:#a6b5d2;}
+.color-f98233{color:#f98233;}
+.color-b8c6dc{color:#b8c6dc;}
+.color-03B1FF{color:#03B1FF;}
+.color-a2a9ca{color:#a2a9ca;}
+.color-8dfabc{color:#8dfabc;}
+.color-7fbadd{color:#7fbadd;}
+.color-09befd{color:#09befd;}
+.color-f64747{color:#f64747;}
+.color-e8ae40{color:#e8ae40;}
+.color-e8ae41{color: #e8ae41;}
+.color-03aff7{color:#03aff7;}
+.color-36a5ed{color:#36a5ed;}
+.color-6ae691{color:#6ae691;}
+.color-6eee96{color:#6eee96;}
+.color-e9ae41{color:#e9ae41;}
+.color-9cabad{color:#9cabad;}
+.color-7E87AD{color:#7E87AD;}
+.color-e2dd4e{color:#e2dd4e;}
+.color-0feee0{color:#0feee0;}
+.color-f9a603{color: #f9a603;}
+.color-75ffa1{color:#75ffa1;}
+.color-dcdcdc{color:#dcdcdc;}
+.color-f8d309{color:#f8d309;}
+.color-e84832{color: #e84832;}
+.color-ef973d{color:#ef973d;}
+.color-2becaf{color:#2becaf;}
+.color-0be0f4{color: #0be0f4;}
+.color-e33824{color:#e33824;}
+.color-00dc34{color:#00dc34;}
+.color-1774ff{color: #1774ff;}
+.color-a517ee{color:#a517ee;}
+.color-e54936{color:#e54936;}
+.color-fff957{color:#fff957;}
+
+// 公共字体大小
+.fs-1 {font-size:1rem;}/*40px*/
+.fs-2 {font-size:1.2rem;}/*48px*/
+.fs-3 {font-size:1.5rem;}/*60px*/
+.fs-4 {font-size:1.7rem;}/*68px*/
+.fs-5 {font-size:2rem;}/*80px*/
+.fs-6 {font-size:2.25rem;}/*90px*/
+.fs-7 {font-size:3.5rem;}/*140px*/
+.fs-8 {font-size:2.5rem;}/*100px*/
+.fs-46{font-size:1.15rem;}/*46px*/
